--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,4 +19,12 @@ const { title } = Astro.props;
   <body>
     <slot />
   </body>
+  <style is:global>
+    @font-face {
+      font-family: "SatoshiVariable";
+      src: url("/fonts/satoshi-variable.ttf");
+      font-weight: 500 900;
+      font-display: swap;
+    }
+  </style>
 </html>
