--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import { Sprite } from "astro-icon";
 ---
 
 <Layout title="Prout">
-  <main>Wololooo</main>
+  <main>
+    Wololooo
+    <Sprite name="arrow_drop_down" />
+  </main>
 </Layout>
