--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Sprite } from "astro-icon";
+import Header from "../components/Header.astro";
 ---
 
-<Layout title="Prout">
-  <main>
-    Wololooo
-    <Sprite name="arrow_drop_down" />
-  </main>
+<Layout title="Accueil">
+  <Header />
 </Layout>
