--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,5 +30,9 @@ const { title } = Astro.props;
       font-weight: 500 900;
       font-display: swap;
     }
+
+    body {
+      @apply bg-surface1;
+    }
   </style>
 </html>
