--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,6 +3,6 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header/index.astro";
 ---
 
-<Layout title="Accueil">
+<Layout title="Projets">
   <Header />
 </Layout>
