--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,9 +1,8 @@
 ---
-import Icon from "../../components/@common/Icon.astro";
 import Logo from "./Logo.astro";
-import NavItem from "./NavItem.astro";
 import NavItemContact from "./NavItemContact.astro";
 import NavItemTeamUX from "./NavItemTeamUX.astro";
+import NavItem from "./components/NavItem.astro";
 ---
 
 <header class="container">
@@ -12,10 +11,10 @@ import NavItemTeamUX from "./NavItemTeamUX.astro";
   <nav>
     <ul>
       <li>
-        <NavItem title="Accueil" to="/" />
+        <NavItem to="/">Accueil</NavItem>
       </li>
       <li>
-        <NavItem title="Projets" to="/projects" />
+        <NavItem to="/projects">Projets</NavItem>
       </li>
       <li>
         <NavItemTeamUX />
@@ -36,11 +35,11 @@ import NavItemTeamUX from "./NavItemTeamUX.astro";
 
   nav {
     margin-left: auto;
+  }
 
-    & ul {
-      display: flex;
-      gap: 40px;
-      align-items: center;
-    }
+  ul {
+    display: flex;
+    gap: 40px;
+    align-items: center;
   }
 </style>
