--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import { Sprite } from "astro-icon";
+import Header from "../components/Header/index.astro";
 
 interface Props {
   title: string;
@@ -20,6 +21,8 @@ const { title } = Astro.props;
   </head>
   <body>
     <Sprite.Provider>
+      <Header />
+
       <slot />
     </Sprite.Provider>
   </body>
