--- a/src/pages/nos-deux-profils.astro
+++ b/src/pages/nos-deux-profils.astro
@@ -2,4 +2,4 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Accueil">accueil</Layout>
+<Layout title="Nos 2 profils">nos 2 profils</Layout>
