header contact hover bg color

--- a/src/components/Header/NavItemContact.astro
+++ b/src/components/Header/NavItemContact.astro
@@ -2,7 +2,7 @@
 
 <style>
   a {
-    @apply bg-surface3;
+    @apply bg-surface3 hover:bg-surface4;
 
     padding: 6px 18px;
     border-radius: 100px;
