--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Accueil">accueil</Layout>
+<Layout title="Accueil">
+  accueil
+
+  <br />
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+  /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
+  /><br /><br /><br />
+</Layout>
