move pages into named folder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Hero from "./homepage/components/Hero.astro";
 ---
 
 <Layout title="Accueil">
-  accueil
-
-  <br />
-  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-  /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-  /><br /><br /><br />
+  <Hero />
 </Layout>
