--- a/src/components/@common/Grid.astro
+++ b/src/components/@common/Grid.astro
@@ -6,13 +6,13 @@ const { outerGap = true } = Astro.props;
   class:list={[
     "grid",
     "gap-y-0",
-    "gap-x-[20px]",
+    "gap-x-5",
     "grid-cols-4",
     "md:grid-cols-8",
-    "xl:gap-x-[30px]",
+    "xl:gap-x-8",
     "xl:grid-cols-12",
     {
-      "px-[20px]": outerGap,
+      "px-5": outerGap,
       "xl:px-0": outerGap,
     },
   ]}
