--- a/src/pages/homepage/components/Hero.astro
+++ b/src/pages/homepage/components/Hero.astro
@@ -1,4 +1,27 @@
-<section>coucou</section>
+---
+import Grid from "../../../components/@common/Grid.astro";
+---
+
+<section class="container">
+  <Grid>
+    <h1 class="col-start-2 col-span-9 text-display-large">
+      Nous sommes Yuna & Daniela, un binôme de <span class="text-primary"
+        >designers UX seniors en freelance</span
+      >
+    </h1>
+    <div class="col-start-2 col-span-6">
+      <p class="our-work mb-8 text-body-extra-large">
+        Notre travail est reconnu pour son efficacité et sa pertinence, en
+        particulier sur les produits numériques dits complexes que nous adorons
+        construire ou déconstruire.
+      </p>
+
+      <p class="text-body-large">
+        Nous livrons un design accessible et le plus sobre possible.
+      </p>
+    </div>
+  </Grid>
+</section>
 
 <style>
   section {
