--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
     }
 
     body {
-      @apply bg-surface1;
+      @apply bg-surface1 text-secondary;
     }
   </style>
 </html>
