--- a/src/pages/homepage/components/Hero.astro
+++ b/src/pages/homepage/components/Hero.astro
@@ -1,16 +1,19 @@
 ---
 import Grid from "../../../components/@common/Grid.astro";
+import PictureYuna from "../../../components/images/Yuna.astro";
+import PictureDaniela from "../../../components/images/Daniela.astro";
+import Brush1 from "../../../components/images/Brush1.astro";
 ---
 
-<section class="container">
+<section class="container mt-[129px]">
   <Grid>
-    <h1 class="col-start-2 col-span-9 text-display-large">
+    <h1 class="col-start-2 col-span-9 mb-8 text-display-large">
       Nous sommes Yuna & Daniela, un binôme de <span class="text-primary"
         >designers UX seniors en freelance</span
       >
     </h1>
     <div class="col-start-2 col-span-6">
-      <p class="our-work mb-8 text-body-extra-large">
+      <p class="our-work mb-5 text-body-extra-large">
         Notre travail est reconnu pour son efficacité et sa pertinence, en
         particulier sur les produits numériques dits complexes que nous adorons
         construire ou déconstruire.
@@ -20,11 +23,16 @@ import Grid from "../../../components/@common/Grid.astro";
         Nous livrons un design accessible et le plus sobre possible.
       </p>
     </div>
+    <div class="col-start-9 col-span-3">
+      <div class="relative mt-[67px]">
+        <div class="flex gap-4">
+          <PictureYuna />
+          <PictureDaniela />
+        </div>
+        <Brush1
+          class="absolute top-[-30px] z-[-1] w-[352px] h-[418px] rotate-[-165.467deg]"
+        />
+      </div>
+    </div>
   </Grid>
 </section>
-
-<style>
-  section {
-    margin-top: 129px;
-  }
-</style>
