header appears above all other elements

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -47,6 +47,7 @@ import NavItem from "./components/NavItem.astro";
   header {
     @apply container;
 
+    z-index: 1;
     position: sticky;
     top: 0;
     display: flex;
