--- a/src/pages/homepage/components/Hero.astro
+++ b/src/pages/homepage/components/Hero.astro
@@ -6,7 +6,7 @@ import Brush1 from "../../../components/images/Brush1.astro";
 import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
 ---
 
-<section class="overflow-hidden mt-[129px]">
+<section class="overflow-x-hidden mt-[129px]">
   <div class="container relative">
     <BackgroundForm1 class="top-[140px] right-[-470px]" />
 
