--- a/src/components/Header/NavItemTeamUX.astro
+++ b/src/components/Header/NavItemTeamUX.astro
@@ -99,6 +99,8 @@ import Icon from "../@common/Icon.astro";
   }
 
   .submenu-container {
+    @apply bg-neutral4;
+
     display: none;
     position: absolute;
     padding-block: 16px;
@@ -106,7 +108,6 @@ import Icon from "../@common/Icon.astro";
     top: calc(100% + 6px);
     transform: translateX(-50%);
     border-radius: 10px;
-    background-color: white;
     box-shadow: 0 2px 4px 0 rgba(8, 18, 79, 0.25);
   }
 
