--- a/src/pages/homepage/components/Hero.astro
+++ b/src/pages/homepage/components/Hero.astro
@@ -6,17 +6,17 @@ import Brush1 from "../../../components/images/Brush1.astro";
 import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
 ---
 
-<section class="overflow-x-hidden mt-[129px]">
-  <div class="container relative">
+<section class="overflow-hidden mt-[129px]">
+  <div class="container relative pb-[137px]">
     <BackgroundForm1 class="top-[140px] right-[-470px]" />
 
     <Grid>
-      <h1 class="col-start-2 col-span-9 mb-8 text-display-large">
+      <h1 class="xl:col-start-2 xl:col-span-9 mb-8 text-display-large">
         Nous sommes Yuna & Daniela, un binôme de <span class="text-primary"
           >designers UX seniors en freelance</span
         >
       </h1>
-      <div class="col-start-2 col-span-6">
+      <div class="xl:col-start-2 xl:col-span-6">
         <p class="our-work mb-5 text-body-extra-large">
           Notre travail est reconnu pour son efficacité et sa pertinence, en
           particulier sur les produits numériques dits complexes que nous
@@ -27,7 +27,7 @@ import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
           Nous livrons un design accessible et le plus sobre possible.
         </p>
       </div>
-      <div class="col-start-9 col-span-3">
+      <div class="xl:col-start-9 xl:col-span-3">
         <div class="relative mt-[67px]">
           <div class="flex gap-4">
             <PictureYuna />
