--- a/src/pages/homepage/components/Hero.astro
+++ b/src/pages/homepage/components/Hero.astro
@@ -4,6 +4,7 @@ import PictureYuna from "../../../components/images/Yuna.astro";
 import PictureDaniela from "../../../components/images/Daniela.astro";
 import Brush1 from "../../../components/images/Brush1.astro";
 import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
+import CallToAction from "../../../components/@common/CallToAction.astro";
 ---
 
 <section class="overflow-hidden mt-[129px]">
@@ -23,9 +24,13 @@ import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
           adorons construire ou déconstruire.
         </p>
 
-        <p class="text-body-large">
+        <p class="text-body-large mb-10">
           Nous livrons un design accessible et le plus sobre possible.
         </p>
+
+        <CallToAction href="/projects" rightIcon="forward">
+          Découvrir nos projets
+        </CallToAction>
       </div>
       <div class="xl:col-start-9 xl:col-span-3">
         <div class="relative mt-[67px]">
