--- a/src/pages/nos-deux-profils/index.astro
+++ b/src/pages/nos-deux-profils/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Breadcrumb from "../../components/Breadcrumb.astro";
 ---
 
-<Layout title="Nos 2 profils">nos 2 profils</Layout>
+<Layout title="Nos 2 profils">
+  <Breadcrumb />
+</Layout>
