--- a/src/components/Header/components/NavItem.astro
+++ b/src/components/Header/components/NavItem.astro
@@ -13,12 +13,15 @@ if ("submenu" in Astro.slots) {
   HTMLTag = "a";
   hrefAttribute = to;
 }
+
+const selected = pathname === to;
 ---
 
 <HTMLTag
   href={hrefAttribute}
   aria-expanded={ariaExpandedAttribute}
-  class:list={["nav-item", { selected: pathname === to }]}
+  aria-current={selected ? "page" : undefined}
+  class:list={["nav-item", { selected }]}
 >
   <slot />
 
