use breadcrumb in pages

--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Breadcrumb from "../../components/Breadcrumb.astro";
 ---
 
-<Layout title="Notre manifeste">notre manifeste</Layout>
+<Layout title="Notre manifeste">
+  <Breadcrumb />
+</Layout>
