--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import Breadcrumb from "../../components/Breadcrumb.astro";
 ---
 
-<Layout title="Projets">projects</Layout>
+<Layout title="Projets">
+  <Breadcrumb />
+</Layout>
