--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "./homepage/components/Hero.astro";
+import Expertises from "./homepage/components/Expertises/index.astro";
 ---
 
 <Layout title="Accueil">
   <Hero />
+  <Expertises />
 </Layout>
