use dani & yuna's picture w/o border radius

--- a/src/components/images/Daniela.astro
+++ b/src/components/images/Daniela.astro
@@ -9,4 +9,5 @@ const { width, height } = Astro.props;
   alt="Daniela Peñaranda"
   width={width}
   height={height}
+  class="rounded-t-full rounded-b-full"
 />
