--- a/src/components/images/Yuna.astro
+++ b/src/components/images/Yuna.astro
@@ -9,4 +9,5 @@ const { width, height } = Astro.props;
   alt="Yuna Orsini"
   width={width}
   height={height}
+  class="rounded-t-full rounded-b-full"
 />
