--- a/src/pages/homepage/components/Hero.astro
+++ b/src/pages/homepage/components/Hero.astro
@@ -1,10 +1,8 @@
 ---
 import Grid from "../../../components/@common/Grid.astro";
-import PictureYuna from "../../../components/images/Yuna.astro";
-import PictureDaniela from "../../../components/images/Daniela.astro";
-import Brush1 from "../../../components/images/Brush1.astro";
 import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
 import CallToAction from "../../../components/@common/CallToAction.astro";
+import DuoDeChoc from "../../../components/DuoDeChoc.astro";
 ---
 
 <section class="overflow-hidden mt-[129px]">
@@ -34,13 +32,7 @@ import CallToAction from "../../../components/@common/CallToAction.astro";
       </div>
       <div class="xl:col-start-9 xl:col-span-3">
         <div class="relative mt-[67px]">
-          <div class="flex gap-4">
-            <PictureYuna />
-            <PictureDaniela />
-          </div>
-          <Brush1
-            class="absolute top-[-30px] z-[-1] w-[352px] h-[418px] rotate-[-165.467deg]"
-          />
+          <DuoDeChoc variant="big" />
         </div>
       </div>
     </Grid>
