who's behind TeamUX??

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "./homepage/components/Hero.astro";
 import Expertises from "./homepage/components/Expertises/index.astro";
+import DerriereTeamUX from "./homepage/components/DerriereTeamUX/index.astro";
 ---
 
 <Layout title="Accueil">
   <Hero />
   <Expertises />
+  <DerriereTeamUX />
 </Layout>
