refactor: move homepage components

--- a/src/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/pages/homepage/DerriereTeamUX/index.astro
@@ -1,12 +1,12 @@
 ---
-import Grid from "../../../../components/@common/Grid.astro";
-import data from "../../../../data/homepage/derriere-team-ux.yaml";
-import Icon from "../../../../components/@common/Icon.astro";
-import DuoDeChoc from "../../../../components/DuoDeChoc.astro";
-import CallToAction from "../../../../components/@common/CallToAction.astro";
-import Brush1 from "../../../../components/images/Brush1.astro";
-import Brush4 from "../../../../components/images/Brush4.astro";
-import Image from "../../../../components/@common/Image.astro";
+import Grid from "../../../components/@common/Grid.astro";
+import data from "../../../data/homepage/derriere-team-ux.yaml";
+import Icon from "../../../components/@common/Icon.astro";
+import DuoDeChoc from "../../../components/DuoDeChoc.astro";
+import CallToAction from "../../../components/@common/CallToAction.astro";
+import Brush1 from "../../../components/images/Brush1.astro";
+import Brush4 from "../../../components/images/Brush4.astro";
+import Image from "../../../components/@common/Image.astro";
 
 const { block1, block2 } = data;
 ---
