--- a/src/pages/homepage/Expertises/index.astro
+++ b/src/pages/homepage/Expertises/index.astro
@@ -1,9 +1,9 @@
 ---
-import data from "../../../../data/homepage/expertises.yaml";
-import Grid from "../../../../components/@common/Grid.astro";
+import data from "../../../data/homepage/expertises.yaml";
+import Grid from "../../../components/@common/Grid.astro";
 import Expertise from "./Expertise.astro";
-import Brush1 from "../../../../components/images/Brush1.astro";
-import Brush4 from "../../../../components/images/Brush4.astro";
+import Brush1 from "../../../components/images/Brush1.astro";
+import Brush4 from "../../../components/images/Brush4.astro";
 ---
 
 <section class="relative container mb-[140px]">
