--- a/src/pages/homepage/Hero.astro
+++ b/src/pages/homepage/Hero.astro
@@ -1,8 +1,8 @@
 ---
-import Grid from "../../../components/@common/Grid.astro";
-import BackgroundForm1 from "../../../components/BackgroundForm1.astro";
-import CallToAction from "../../../components/@common/CallToAction.astro";
-import DuoDeChoc from "../../../components/DuoDeChoc.astro";
+import Grid from "../../components/@common/Grid.astro";
+import BackgroundForm1 from "../../components/BackgroundForm1.astro";
+import CallToAction from "../../components/@common/CallToAction.astro";
+import DuoDeChoc from "../../components/DuoDeChoc.astro";
 ---
 
 <section class="overflow-hidden mt-[129px]">
