--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "./homepage/components/Hero.astro";
-import Expertises from "./homepage/components/Expertises/index.astro";
-import DerriereTeamUX from "./homepage/components/DerriereTeamUX/index.astro";
+import Hero from "./homepage/Hero.astro";
+import Expertises from "./homepage/Expertises/index.astro";
+import DerriereTeamUX from "./homepage/DerriereTeamUX/index.astro";
 ---
 
 <Layout title="Accueil">
