refactor: prefix grid with xl:

--- a/src/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/pages/homepage/DerriereTeamUX/index.astro
@@ -19,7 +19,7 @@ const { block1, block2 } = data;
       <h2 class="mb-20 text-display-small text-center">{data.title}</h2>
       <Grid>
         <div
-          class="col-start-2 col-span-5 p-10 flex flex-col gap-8 bg-surface6 rounded-[26px]"
+          class="xl:col-start-2 xl:col-span-5 p-10 flex flex-col gap-8 bg-surface6 rounded-[26px]"
         >
           <h3 class="mb-8 text-headline-medium-bold">{block1.title}</h3>
 
@@ -41,7 +41,7 @@ const { block1, block2 } = data;
           </CallToAction>
         </div>
         <div
-          class="col-span-5 flex flex-col gap-8 h-fit p-10 bg-surface7 rounded-[26px]"
+          class="xl:col-span-5 flex flex-col gap-8 h-fit p-10 bg-surface7 rounded-[26px]"
         >
           <h3 class="text-headline-medium-bold">{block2.title}</h3>
           <div class="relative">
@@ -61,7 +61,7 @@ const { block1, block2 } = data;
     </div>
     <div class="container">
       <Grid>
-        <div class="col-start-2 col-span-10 flex flex-col gap-0.5">
+        <div class="xl:col-start-2 xl:col-span-10 flex flex-col gap-0.5">
           <div
             class="flex flex-col gap-10 p-10 bg-surface5 rounded-t-[26px] rounded-b-[4px]"
           >
