--- a/src/pages/homepage/Expertises/index.astro
+++ b/src/pages/homepage/Expertises/index.astro
@@ -8,11 +8,11 @@ import Brush4 from "../../../components/images/Brush4.astro";
 
 <section class="relative container mb-[140px]">
   <Grid>
-    <h3 class="col-start-2 col-span-full text-headline-medium mb-10">
+    <h3 class="xl:col-start-2 xl:col-span-full text-headline-medium mb-10">
       {data.title}
     </h3>
 
-    <ul class="col-start-2 col-span-5 flex flex-col gap-8">
+    <ul class="xl:col-start-2 xl:col-span-5 flex flex-col gap-8">
       {
         data.expertises.map((expertise) => {
           return (
