--- a/src/pages/homepage/Expertises/index.astro
+++ b/src/pages/homepage/Expertises/index.astro
@@ -1,9 +1,8 @@
 ---
-import data from "../../../data/homepage/expertises.yaml";
 import Grid from "../../../components/@common/Grid.astro";
+import Brush from "../../../components/@common/Brush.astro";
 import Expertise from "./Expertise.astro";
-import Brush1 from "../../../components/images/Brush1.astro";
-import Brush4 from "../../../components/images/Brush4.astro";
+import data from "../../../data/homepage/expertises.yaml";
 ---
 
 <section class="relative container mb-[140px]">
@@ -25,17 +24,20 @@ import Brush4 from "../../../components/images/Brush4.astro";
     </ul>
   </Grid>
 
-  <Brush1
+  <Brush
+    id="1"
     class="absolute top-0 z-[-1] w-[237px] h-[281px] rotate-[136.069deg] translate-x-[45px] translate-y-[90px]"
     role="presentation"
   />
 
-  <Brush4
+  <Brush
+    id="4"
     class="absolute top-0 z-[-1] w-[490px] h-[487px] translate-x-[600px] translate-y-[720px]"
     role="presentation"
   />
 
-  <Brush1
+  <Brush
+    id="1"
     class="absolute top-0 z-[-1] w-[222px] h-[263px] translate-x-[-5px] translate-y-[1400px]"
     role="presentation"
   />
