homepage: projects teasing

--- a/src/pages/homepage/Hero.astro
+++ b/src/pages/homepage/Hero.astro
@@ -7,7 +7,9 @@ import DuoDeChoc from "../../components/DuoDeChoc.astro";
 
 <section class="overflow-hidden mt-[129px]">
   <div class="container relative pb-[137px]">
-    <BackgroundForm1 class="top-[140px] right-[-470px]" />
+    <BackgroundForm1
+      class="absolute top-[140px] right-[-470px] z-[-1] w-[1159px] h-[586px] rotate-[-30.785deg]"
+    />
 
     <Grid>
       <h1 class="xl:col-start-2 xl:col-span-9 mb-8 text-display-large">
