--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "./homepage/Hero.astro";
 import Expertises from "./homepage/Expertises/index.astro";
 import DerriereTeamUX from "./homepage/DerriereTeamUX/index.astro";
+import ProjectsTeasing from "./homepage/ProjectsTeasing/index.astro";
 ---
 
 <Layout title="Accueil">
   <Hero />
   <Expertises />
   <DerriereTeamUX />
+  <ProjectsTeasing />
 </Layout>
