--- a/src/components/BackgroundForm1.astro
+++ b/src/components/BackgroundForm1.astro
@@ -1,16 +1,7 @@
 ---
 const props = Astro.props;
 
-const cssClasses = [
-  "absolute",
-  "z-[-1]",
-  "bg-surface2",
-  "w-[1159px]",
-  "h-[586px]",
-  "rotate-[-30.785deg]",
-  "rounded-[1000px]",
-  props.class,
-];
+const cssClasses = ["bg-surface2", "rounded-[1000px]", props.class];
 ---
 
 <div role="presentation" class:list={cssClasses}></div>
