--- a/src/components/@common/Icon.astro
+++ b/src/components/@common/Icon.astro
@@ -12,6 +12,7 @@ interface Props {
     | "forward"
     | "logo"
     | "open_in_new"
+    | "quote"
     | "visibility";
   width: `${number}px`;
   height: `${number}px`;
