--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "./homepage/Hero.astro";
 import Expertises from "./homepage/Expertises/index.astro";
 import DerriereTeamUX from "./homepage/DerriereTeamUX/index.astro";
 import ProjectsTeasing from "./homepage/ProjectsTeasing/index.astro";
+import Testimonials from "./homepage/Testimonials/index.astro";
 ---
 
 <Layout title="Accueil">
@@ -11,4 +12,5 @@ import ProjectsTeasing from "./homepage/ProjectsTeasing/index.astro";
   <Expertises />
   <DerriereTeamUX />
   <ProjectsTeasing />
+  <Testimonials />
 </Layout>
