--- a/src/pages/homepage/Expertises/index.astro
+++ b/src/pages/homepage/Expertises/index.astro
@@ -7,9 +7,11 @@ import data from "../../../data/homepage/expertises.yaml";
 
 <section class="relative container mb-[140px]">
   <Grid>
-    <h3 class="xl:col-start-2 xl:col-span-full text-headline-medium mb-10">
+    <h2
+      class="xl:col-start-2 xl:col-span-full text-headline-medium text-neutral1 mb-10"
+    >
       {data.title}
-    </h3>
+    </h2>
 
     <ul class="xl:col-start-2 xl:col-span-5 flex flex-col gap-8">
       {
