--- a/src/components/@common/Brush.astro
+++ b/src/components/@common/Brush.astro
@@ -9,6 +9,7 @@ const { id, ...props } = Astro.props;
 ---
 
 <Image
+  role="presentation"
   srcSet={[
     `images/brush${id}.png`,
     `images/brush${id}.avif`,
