--- a/src/components/BackgroundForm1.astro
+++ b/src/components/BackgroundForm1.astro
@@ -1,7 +1,13 @@
 ---
 const props = Astro.props;
 
-const cssClasses = ["bg-surface2", "rounded-[1000px]", props.class];
+const cssClasses = [
+  "w-[1159px]",
+  "h-[586px]",
+  "bg-surface2",
+  "rounded-[1000px]",
+  props.class,
+];
 ---
 
 <div role="presentation" class:list={cssClasses}></div>
