--- a/src/pages/homepage/Hero.astro
+++ b/src/pages/homepage/Hero.astro
@@ -8,7 +8,7 @@ import DuoDeChoc from "../../components/DuoDeChoc.astro";
 <section class="overflow-hidden mt-[129px]">
   <div class="container relative pb-[137px]">
     <BackgroundForm1
-      class="absolute top-[140px] right-[-470px] z-[-1] w-[1159px] h-[586px] rotate-[-30.785deg]"
+      class="absolute top-[140px] right-[-470px] z-[-1] rotate-[-30.785deg]"
     />
 
     <Grid>
