--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Contact from "../components/Contact.astro";
 import Hero from "./homepage/Hero.astro";
 import Expertises from "./homepage/Expertises/index.astro";
 import DerriereTeamUX from "./homepage/DerriereTeamUX/index.astro";
@@ -13,4 +14,5 @@ import Testimonials from "./homepage/Testimonials/index.astro";
   <DerriereTeamUX />
   <ProjectsTeasing />
   <Testimonials />
+  <Contact class="mt-[-100px]" />
 </Layout>
