use Astro polymorphic props

--- a/src/components/@common/Grid.astro
+++ b/src/components/@common/Grid.astro
@@ -1,9 +1,11 @@
 ---
-interface Props {
+import { HTMLTag, Polymorphic } from "astro/types";
+
+type Props<Tag extends HTMLTag> = Polymorphic<{
   class: string;
   outerGap?: boolean;
-  as?: string;
-}
+  as?: Tag;
+}>;
 
 const { as: HTMLTag = "div", outerGap = true, class: cssClasses } = Astro.props;
 ---
