add missing icon name

--- a/src/components/@common/Icon.astro
+++ b/src/components/@common/Icon.astro
@@ -1,7 +1,7 @@
 ---
 import { Sprite } from "astro-icon";
 
-interface Props {
+export interface Props {
   name:
     | "arrow_drop_down"
     | "arrow_drop_up"
