--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Expertises from "./homepage/Expertises/index.astro";
 import DerriereTeamUX from "./homepage/DerriereTeamUX/index.astro";
 import ProjectsTeasing from "./homepage/ProjectsTeasing/index.astro";
 import Testimonials from "./homepage/Testimonials/index.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Accueil">
@@ -15,4 +16,5 @@ import Testimonials from "./homepage/Testimonials/index.astro";
   <ProjectsTeasing />
   <Testimonials />
   <Contact class="mt-[-100px]" />
+  <Footer />
 </Layout>
