prefix grid css classes with xl:

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -16,7 +16,7 @@ const { class: cssClasses } = Astro.props;
 >
   <div id="contact" class="container">
     <Grid>
-      <div class="col-start-2 col-span-8">
+      <div class="xl:col-start-2 col-span-8">
         <div class="relative p-14 bg-surface3 rounded-[26px]">
           <BackgroundForm1
             class="absolute z-[-1] top-[-205px] right-[-860px] rotate-[-31deg]"
