--- a/src/pages/homepage/Testimonials/index.astro
+++ b/src/pages/homepage/Testimonials/index.astro
@@ -10,7 +10,7 @@ import CallToAction from "../../../components/@common/CallToAction.astro";
     {
       data.testimonials.map((testimonial) => {
         return (
-          <li class="col-span-4 flex flex-col p-[50px] bg-neutral4 rounded-[26px]">
+          <li class=" xl:col-span-4 flex flex-col p-[50px] bg-neutral4 rounded-[26px]">
             <p
               lang={testimonial.contentLang}
               class="text-body-medium mt-[50px] mb-auto"
