--- a/src/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/pages/homepage/DerriereTeamUX/index.astro
@@ -70,7 +70,6 @@ const { block1, block2 } = data;
             <h3 class="text-headline-medium-bold">
               {data.certifications.title}
             </h3>
-            <ul class="flex justify-between">
               <li><Image srcSet={["images/access42.png"]} /></li>
               <li><Image srcSet={["images/IDF.png"]} /></li>
               <li><Image srcSet={["images/w3c.png"]} /></li>
@@ -78,6 +77,7 @@ const { block1, block2 } = data;
               <li><Image srcSet={["images/uxer.png"]} /></li>
               <li><Image srcSet={["images/shifta.png"]} /></li>
               <li><Image srcSet={["images/INR.png"]} /></li>
+            <ul class="flex items-center justify-between">
             </ul>
           </div>
           <div
