hardcode images sizes

--- a/src/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/pages/homepage/DerriereTeamUX/index.astro
@@ -70,14 +70,36 @@ const { block1, block2 } = data;
             <h3 class="text-headline-medium-bold">
               {data.certifications.title}
             </h3>
-              <li><Image srcSet={["images/access42.png"]} /></li>
-              <li><Image srcSet={["images/IDF.png"]} /></li>
-              <li><Image srcSet={["images/w3c.png"]} /></li>
-              <li><Image srcSet={["images/opquast.png"]} /></li>
-              <li><Image srcSet={["images/uxer.png"]} /></li>
-              <li><Image srcSet={["images/shifta.png"]} /></li>
-              <li><Image srcSet={["images/INR.png"]} /></li>
             <ul class="flex items-center justify-between">
+              <li>
+                <Image
+                  srcSet={["images/access42.png"]}
+                  width="80"
+                  height="58"
+                />
+              </li>
+              <li>
+                <Image srcSet={["images/IDF.png"]} width="170" height="56" />
+              </li>
+              <li>
+                <Image srcSet={["images/w3c.png"]} width="90" height="46" />
+              </li>
+              <li>
+                <Image
+                  srcSet={["images/opquast.png"]}
+                  width="140"
+                  height="36"
+                />
+              </li>
+              <li>
+                <Image srcSet={["images/uxer.png"]} width="46" height="47" />
+              </li>
+              <li>
+                <Image srcSet={["images/shifta.png"]} width="106" height="40" />
+              </li>
+              <li>
+                <Image srcSet={["images/INR.png"]} width="120" height="44" />
+              </li>
             </ul>
           </div>
           <div
@@ -86,12 +108,20 @@ const { block1, block2 } = data;
             <h3 class="text-headline-medium-bold">
               {data.commited.title}
             </h3>
-            <ul class="flex gap-[44px]">
+            <ul class="flex items-center gap-[44px]">
               <li>
-                <Image srcSet={["images/diseno-etico.png"]} />
+                <Image
+                  srcSet={["images/diseno-etico.png"]}
+                  width="90"
+                  height="49"
+                />
               </li>
               <li>
-                <Image srcSet={["images/designers-ethiques.png"]} />
+                <Image
+                  srcSet={["images/designers-ethiques.png"]}
+                  width="105"
+                  height="49"
+                />
               </li>
             </ul>
           </div>
