--- a/src/components/@common/Image.astro
+++ b/src/components/@common/Image.astro
@@ -1,9 +1,10 @@
 ---
+import { HTMLAttributes } from "astro/types";
 type PNGSrc = string;
 type AvifSrc = string;
 type WebPSrc = string;
 
-interface Props {
+interface Props extends HTMLAttributes<"img"> {
   srcSet: [AvifSrc, WebPSrc, PNGSrc];
   alt: string;
   width?: `${number}px`;
