--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import Breadcrumb from "../../components/Breadcrumb.astro";
+import Hero from "./Hero.astro";
 ---
 
 <Layout title="Projets">
   <Breadcrumb />
+  <Hero />
 </Layout>
